--- a/index.html
+++ b/index.html
@@ -235,11 +235,39 @@
                 <img src="assets/connection.svg" alt="">
             </div>
             <div class="container">
-                
+                <h3 class="testimonal__title">TESTIMONIALS</h3>
+                <h1 class="testimonal__subtitle">Our Clients Love Us.</h1>
+                <p class="testimonal__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsa ratione fuga delectus earum eligendi recusandae odio similique dolor, quam sint sunt laboriosam aliquam!</p>
+                <div class="user">
+                    <div class="user__rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                    </div>
+                    <h3 class="user__title">Amazing User Experience</h3>
+                    <p class="user__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, tempora sunt aperiam culpa atque praesentium dignissimos a quos facilis esse aspernatur deleniti, vitae perspiciatis cupiditate officiis, natus pariatur eveniet numquam. Placeat, ab et eaque hic consequuntur corrupti. Fugiat officia soluta ea magni ullam tempore?</p>
+                    <div class="user__profile">
+                        <img class="user__profile--file" src="" alt="">
+                        <div class="user__names">
+                            <h3 class="user__name">Charlotte Hale</h3>
+                            <h5 class="user__role">Director, Delos Inc.</h5>
+                        </div>
+                        <div class="arrows">
+                            <img class="leftarrow" src="" alt="">
+                            <img class="rightarrow" src="" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <section></section>
+    <section id="faqs">
+        <div class="row">
+            
+        </div>
+    </section>
 </body>
 <footer></footer>
 </html>
