--- a/index.html
+++ b/index.html
@@ -265,9 +265,94 @@
     </section>
     <section id="faqs">
         <div class="row">
-            
+            <div class="faq__container">
+                <h4 class="faq__title">FAQS</h4>
+                <h2 class="faq__subtitle">You have Questions?</h2>
+                <p class="faq__description">And we have got answers to all of them. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="faq__prompts">
+                <ul class="faq__questions">
+                    <li class="faq__question">Are all the templates easily customizable?</li>
+                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
+                    <li class="faq__question">How long do you usually support an standalone template for?</li>
+                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
+                    <li class="faq__question">What kind of payment methods do you accept?</li>
+                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
+                    <li class="faq__question">Is there a subscribption service to get the latest templates</li>
+                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
+                    <li class="faq__question">Are the templates compatible with React?</li>
+                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
+                    <li class="faq__question">Do you really support Explorer 11?</li>
+                    <p class="faq__answers">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel tempora quam quo aperiam deserunt magnam ut est, vitae dolore, commodi quidem doloribus, impedit velit repellat?</p>
+                </ul>
+            </div>
+            <div class="contact__container">
+                <h3 class="contact__title">Developers all over the world are happily using Treact</h3>
+                <button class="Start">Get Started</button>
+                <button class="Contact">Contact Us</button>
+            </div>
         </div>
     </section>
 </body>
-<footer></footer>
+<footer>
+    <div class="row">
+        <div class="links">
+            <div class="link">
+                <h4 class="link__title">MAIN</h4>
+                <ul class="link__row">
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h4 class="link__title">MAIN</h4>
+                <ul class="link__row">
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h4 class="link__title">MAIN</h4>
+                <ul class="link__row">
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h4 class="link__title">MAIN</h4>
+                <ul class="link__row">
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                </ul>
+            </div>
+            <div class="link">
+                <h4 class="link__title">MAIN</h4>
+                <ul class="link__row">
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                    <li class="link--click"><a href="">Blog</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer__info">
+        <img class="logo" src="assets/P.png" alt="">
+        <div class="footer__copyright">&copy; 2023 Practice Inc. All rights Reserved.
+            <div class="social__media--links">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
