HTML tweaks & CSS add-ons

--- a/index.html
+++ b/index.html
@@ -12,31 +12,35 @@
     <section id="navi">
         <nav>
             <div class="row">
-                <img class="logo" src="assets/P.png">
-                <ul class="nav__links">
-                    <li><a href="#" class="nav__link"></a>About</li>
-                    <li><a href="#" class="nav__link"></a>Blog</li>
-                    <li><a href="#" class="nav__link"></a>Pricing</li>
-                    <li><a href="#" class="nav__link"></a>Contact Us</li>
-                    <li><a href="#" class="nav__link"></a>Login</li>
-                    <li><a href="#" class="nav__link nav__link--primary">Sign up</a></li>
-                </ul>
+                <div class="nav__container">
+                    <img class="logo" src="assets/P.png">
+                    <ul class="nav__links">
+                        <li><a href="#" class="nav__link"></a>About</li>
+                        <li><a href="#" class="nav__link"></a>Blog</li>
+                        <li><a href="#" class="nav__link"></a>Pricing</li>
+                        <li><a href="#" class="nav__link"></a>Contact Us</li>
+                        <li><a href="#" class="nav__link nav__link--primary"></a>Login</li>
+                        <li><a href="#" class="nav__link nav__link--primary">Sign up</a></li>
+                        </ul>
+                </div>
             </div>
         </nav>
     </section>
     <section id="landing">
         <div class="row">
-            <div class="landing">
-                <h2>Beautiful React Templates for you</h2>
-                <p>Our templates are easy to setup, understand and customize. Fully modulaar components with a variety of pages and components.</p>
-                <div>
-                    <input type="text" placeholder="Your E-mail Address">
-                    <button>Get Started</button>
+            <div class="section__landing">
+                <div class="landing__description">
+                    <h2>Beautiful React Templates for you</h2>
+                    <p>Our templates are easy to setup, understand and customize. Fully modulaar components with a variety of pages and components.</p>
+                    <div>
+                        <input type="text" placeholder="Your E-mail Address">
+                        <button>Get Started</button>
+                    </div>
+                    <h6>OUR TRUSTED CUSTOMERS</h6>
                 </div>
-                <h6>OUR TRUSTED CUSTOMERS</h6>
-            </div>
-            <div class="landing__img">
-                <img src="assets/undraw_software_engineer_re_tnjc.svg" alt="">
+                <div class="landing__img">
+                    <img class="firstimg" src="assets/undraw_software_engineer_re_tnjc.svg" alt="">
+                </div>
             </div>
         </div>
     </section>
