--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/c6351741c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="root">
     <section id="navi">
         <nav>
             <div class="row">
@@ -21,7 +22,7 @@
                         <li><a href="#" class="nav__link"></a>Contact Us</li>
                         <li><a href="#" class="nav__link nav__link--primary"></a>Login</li>
                         <li><a href="#" class="nav__link nav__link--primary">Sign up</a></li>
-                        </ul>
+                    </ul>
                 </div>
             </div>
         </nav>
@@ -30,13 +31,13 @@
         <div class="row">
             <div class="section__landing">
                 <div class="landing__description">
-                    <h2>Beautiful React Templates for you</h2>
-                    <p>Our templates are easy to setup, understand and customize. Fully modulaar components with a variety of pages and components.</p>
-                    <div>
+                    <h2 class="landing__title">Beautiful React Templates for you.</h2>
+                    <p class="landing__para">Our templates are easy to setup, understand and customize. Fully modulaar components with a variety of pages and components.</p>
+                    <div class="landing__info">
                         <input type="text" placeholder="Your E-mail Address">
-                        <button>Get Started</button>
+                        <button class="getstarted">Get Started</button>
                     </div>
-                    <h6>OUR TRUSTED CUSTOMERS</h6>
+                    <h6 class="landing__trust">OUR TRUSTED CUSTOMERS</h6>
                 </div>
                 <div class="landing__img">
                     <img class="firstimg" src="assets/undraw_software_engineer_re_tnjc.svg" alt="">
@@ -47,103 +48,122 @@
     <section id="features">
         <div class="feature__container">
             <div class="row">
-                <h4 class="features">FEATURES</h4>
-                <h1 class="features__header">We have Amazing Service.</h1>
-                <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima eligendi delectus nostrum, atque cupiditate amet.</p>
+                <div class="feature__description">
+                    <h4 class="features">FEATURES</h4>
+                    <h1 class="features__header">We have Amazing Service.</h1>
+                    <p class="feature__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima eligendi delectus nostrum, atque cupiditate amet.</p>
+                </div>
                 <div class="services">
                     <div class="service">
-                        <i class="fa-regular fa-shield-quartered"></i>
+                        <div class="service__img">
+                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                        </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">Secure</h3>
                             <p class="service__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                         </div>
                     </div>
                     <div class="service">
-                        <i class="fa-light fa-headset"></i>
+                        <div class="service__img">
+                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                        </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">24/7 Support</h3>
                             <p class="service__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                         </div>
                     </div>
                     <div class="service">
-                        <i class="fa-solid fa-sparkles"></i>
+                        <div class="service__img">
+                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                        </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">customizable</h3>
                             <p class="service__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                         </div>
                     </div>
                     <div class="service">
-                        <i class="fa-regular fa-arrows-repeat"></i>
+                        <div class="service__img">
+                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                        </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">Reliable</h3>
                             <p class="service__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                         </div>
                     </div>
                     <div class="service">
-                        <i class="fa-sharp fa-solid fa-bolt"></i>
+                        <div class="service__img">
+                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                        </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">Fast</h3>
                             <p class="service__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                         </div>
                     </div>
                     <div class="service">
-                        <i class="fa-sharp fa-solid fa-bolt"></i>
+                        <div class="service__img">
+                            <i class="fa-sharp fa-solid fa-bolt"></i>
+                        </div>
                         <div class="service__description">
                             <h3 class="service__subtitle">Easy</h3>
                             <p class="service__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <section id="qualitywork">
-        <div class="row">
-            <div class="container">
-                <h3 class="qualitywork__title">QUALITY WORK</h3>
-                <h1 class="qualitywork__header">Designed & Developed by Professionals.</h1>
-                <p class="qualitywork__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam facilis hic illo et nostrum sint quae quod voluptatum ipsum beatae, tempore quia. Commodi, iure?</p>
-            </div>
-            <div class="img__wrapper">
-                <img src="assets/thoughts.svg">
-            </div>
+    <div class="row">
+    <div class="qw__container">
+        <div class="container">
+            <h3 class="qualitywork__title">QUALITY WORK</h3>
+            <h1 class="qualitywork__header">Designed & Developed by Professionals.</h1>
+            <p class="qualitywork__para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam facilis hic illo et nostrum sint quae quod voluptatum ipsum beatae, tempore quia. Commodi, iure?</p>
         </div>
+        <div class="img__wrapper">
+            <img src="assets/thoughts.svg">
+        </div>
+    </div>
+    </div>
     </section>
     <section id="steps">
-        <div class="row">
-            <div class="img__wrapper">
-                <img src="assets/steps.svg" alt="">
+    <div class="row">
+    <div class="step__container">
+        <div class="img__wrapper">
+            <img src="assets/steps.svg" alt="">
+        </div>
+        <div class="container">
+            <h3 class="step__title">STEPS</h3>
+            <h1 class="step__header">Easy to Get</h1>
+            <h1 class="step__header">Started.</h1>
+            <div class="step">
+                <h2 class="step__number">01</h2>
+                <div class="step__description">
+                    <h3 class="step__subtitle">Register</h3>
+                    <p class="step__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
+                </div>
             </div>
-            <div class="container">
-                <h3>STEPS</h3>
-                <h1>Easy to Get Started.</h1>
-                <div class="step">
-                    <h2>01</h2>
-                    <div class="step__description">
-                        <h3 class="step__subtitle">Register</h3>
-                        <p class="step__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
-                    </div>
+            <div class="step">
+                <h2 class="step__number">02</h2>
+                <div class="step__description">
+                    <h3 class="step__subtitle">Register</h3>
+                    <p class="step__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                 </div>
-                <div class="step">
-                    <h2>02</h2>
-                    <div class="step__description">
-                        <h3 class="step__subtitle">Register</h3>
-                        <p class="step__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
-                    </div>
-                </div>
-                <div class="step">
-                    <h2>03</h2>
-                    <div class="step__description">
-                        <h3 class="step__subtitle">Register</h3>
-                        <p class="step__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
-                    </div>
+            </div>
+            <div class="step">
+                <h2 class="step__number">03</h2>
+                <div class="step__description">
+                    <h3 class="step__subtitle">Register</h3>
+                    <p class="step__para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus.</p>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+    </div>
+</section>
     <section id="values">
         <div class="row">
+        <div class="value__container">
             <div class="container">
                 <h3 class="values__title">VALUES</h3>
                 <h1 class="values__header">We Always Abide by Our Principles</h1>
@@ -163,6 +183,7 @@
             <div class="img__wrapper">
                 <img src="assets/goals.svg">
             </div>
+        </div>
         </div>
     </section>
     <section id="pricing">
@@ -244,11 +265,11 @@
                 <p class="testimonal__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsa ratione fuga delectus earum eligendi recusandae odio similique dolor, quam sint sunt laboriosam aliquam!</p>
                 <div class="user">
                     <div class="user__rating">
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
-                            <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                     </div>
                     <h3 class="user__title">Amazing User Experience</h3>
                     <p class="user__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, tempora sunt aperiam culpa atque praesentium dignissimos a quos facilis esse aspernatur deleniti, vitae perspiciatis cupiditate officiis, natus pariatur eveniet numquam. Placeat, ab et eaque hic consequuntur corrupti. Fugiat officia soluta ea magni ullam tempore?</p>
@@ -297,8 +318,8 @@
             </div>
         </div>
     </section>
-</body>
-<footer>
+    </body>
+    <footer>
     <div class="row">
         <div class="links">
             <div class="link">
@@ -358,5 +379,6 @@
             </div>
         </div>
     </div>
+</div>
 </footer>
 </html>
