--- a/index.html
+++ b/index.html
@@ -163,92 +163,110 @@
 </section>
     <section id="values">
         <div class="row">
-        <div class="value__container">
-            <div class="container">
-                <h3 class="values__title">VALUES</h3>
-                <h1 class="values__header">We Always Abide by Our Principles</h1>
-                <p class="values__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit nesciunt assumenda quisquam eveniet iste corporis quis adipisci, esse veritatis, blanditiis et aut, rerum saepe? Consequuntur sint maiores cum reprehenderit hic quae vitae.</p>
-                <div class="value__containers">
-                    <i></i>
-                    <h3>Affordable</h3>
-                    <p>We promise to offer you the best rate we can - at par with the industry standard.</p>
+            <div class="value__container">
+                <div class="container val__can">
+                    <h3 class="values__title">VALUES</h3>
+                    <h1 class="values__header">We Always Abide by Our Principles</h1>
+                    <p class="values__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit nesciunt assumenda quisquam eveniet iste corporis quis adipisci, esse veritatis, blanditiis et aut, rerum saepe? Consequuntur sint maiores cum reprehenderit hic quae vitae.</p>
+                    <div class="value__containers">
+                        <div class="value__container--row">
+                            <i></i>
+                            <h3 class="value__side">Affordable</h3>
+                            <p>We promise to offer you the best rate we can - at par with the industry standard.</p>
+                        </div>
+                    </div>
+                    <div class="value__containers">
+                        <div class="value__container--row">
+                            <i></i>
+                            <h3>Professionalism</h3>
+                            <p>We assure you that our templates are desgined and created by professional desginers</p>
+                        </div>
+                    </div>
+                    <button>Learn More</button>
                 </div>
-                <div class="value__containers">
-                    <i></i>
-                    <h3>Professionalism</h3>
-                    <p>We assure you that our templates are desgined and created by professional desginers</p>
+                <div class="img__wrapper">
+                    <img src="assets/goals.svg">
                 </div>
-                <button>Learn More</button>
             </div>
-            <div class="img__wrapper">
-                <img src="assets/goals.svg">
-            </div>
-        </div>
         </div>
     </section>
     <section id="pricing">
         <div class="row">
-            <div class="pricing">
-                <h3>PRICING</h3>
-                <h1>Reasonable & Flexible Plans.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt esse deleniti voluptatibus maxime rem? Eius nostrum officia exercitationem? Eligendi accusantium necessitatibus saepe incidunt ex?</p>
-            </div>
-            <div class="plans">
-                <div class="plan">
-                    <div class="plan__top">
-                        <h4 class="plan__title">PERSONAL</h4>
-                        <span class="plan__price">$17.99</span>
-                        <h6 class="plan__monthly">MONTHLY</h6>
-                    </div>
-                    <div class="plan__middle">
-                        <h4>For Individuals</h4>
-                        <ul class="plan__details">
-                            <li>30 Templates</li>
-                            <li>7 Landing Pages</li>
-                            <li>12 Internal Pages</li>
-                            <li>Basic Assistance</li>
-                        </ul>
-                    </div>
-                    <div class="plan__bottom">
-                        <button>BUY NOW</button>
-                    </div>
+            <div class="price__container">
+                <div class="pricing">
+                    <h3 class="price__title">PRICING</h3>
+                    <h1 class="price__header">Reasonable & Flexible Plans.</h1>
+                    <p class="pricing__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt labore debitis earum iste nam laudantium quis dolor delectus quam quo!</p>
                 </div>
-                <div class="plan">
-                    <div class="plan__top">
-                        <h4 class="plan__title">BUSINESS</h4>
-                        <span class="plan__price">$37.99</span>
-                        <h6 class="plan__monthly">MONTHLY</h6>
+                <div class="plans">
+                    <div class="plan">
+                        <div class="plan__top">
+                            <h4 class="plan__title">PERSONAL</h4>
+                            <span class="plan__price">$17.99</span>
+                            <h6 class="plan__monthly">MONTHLY</h6>
+                        </div>
+                        <div class="plan__middle">
+                            <div class="plan__type">
+                                <h4>For Individuals</h4>
+                            </div>
+                            <div class="plan__dets">
+                                <ul class="plan__details">
+                                    <li class="plan__detail">30 Templates</li>
+                                    <li class="plan__detail">7 Landing Pages</li>
+                                    <li class="plan__detail">12 Internal Pages</li>
+                                    <li class="plan__detail">Basic Assistance</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="plan__bottom">
+                            <button>BUY NOW</button>
+                        </div>
                     </div>
-                    <div class="plan__middle">
-                        <h4>For Small Businesses</h4>
-                        <ul class="plan__details">
-                            <li>60 Templates</li>
-                            <li>15 Landing Pages</li>
-                            <li>22 Internal Pages</li>
-                            <li>Priority Assistance</li>
-                        </ul>
+                    <div class="plan">
+                        <div class="plan__top">
+                            <h4 class="plan__title">BUSINESS</h4>
+                            <span class="plan__price">$37.99</span>
+                            <h6 class="plan__monthly">MONTHLY</h6>
+                        </div>
+                        <div class="plan__middle">
+                            <div class="plan__type">
+                                <h4>For Small Businesses</h4>
+                            </div>
+                            <div class="plan__dets">
+                                <ul class="plan__details">
+                                    <li class="plan__detail">60 Templates</li>
+                                    <li class="plan__detail">15 Landing Pages</li>
+                                    <li class="plan__detail">22 Internal Pages</li>
+                                    <li class="plan__detail">Priority Assistance</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="plan__bottom">
+                            <button>BUY NOW</button>
+                        </div>
                     </div>
-                    <div class="plan__bottom">
-                        <button>BUY NOW</button>
-                    </div>
-                </div>
-                <div class="plan">
-                    <div class="plan__top">
-                        <h4 class="plan__title">ENTERPRISE</h4>
-                        <span class="plan__price">$57.99</span>
-                        <h6 class="plan__monthly">MONTHLY</h6>
-                    </div>
-                    <div class="plan__middle">
-                        <h4>For Large Companies</h4>
-                        <ul class="plan__details">
-                            <li>90 Templates</li>
-                            <li>27 Landing Pages</li>
-                            <li>37 Internal Pages</li>
-                            <li>Personal Assistance</li>
-                        </ul>
-                    </div>
-                    <div class="plan__bottom">
-                        <button>BUY NOW</button>
+                    <div class="plan">
+                        <div class="plan__top">
+                            <h4 class="plan__title">ENTERPRISE</h4>
+                            <span class="plan__price">$57.99</span>
+                            <h6 class="plan__monthly">MONTHLY</h6>
+                        </div>
+                        <div class="plan__middle">
+                            <div class="plan__type">
+                                <h4>For Large Companies</h4>
+                            </div>
+                            <div class="plan__dets">
+                                <ul class="plan__details">
+                                    <li class="plan__detail">90 Templates</li>
+                                    <li class="plan__detail">27 Landing Pages</li>
+                                    <li class="plan__detail">37 Internal Pages</li>
+                                    <li class="plan__detail">Personal Assistance</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="plan__bottom">
+                            <button>BUY NOW</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -256,35 +274,37 @@
     </section>
     <section id="testimonials">
         <div class="row">
-            <div class="img__wrapper">
-                <img src="assets/connection.svg" alt="">
-            </div>
-            <div class="container">
-                <h3 class="testimonal__title">TESTIMONIALS</h3>
-                <h1 class="testimonal__subtitle">Our Clients Love Us.</h1>
-                <p class="testimonal__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsa ratione fuga delectus earum eligendi recusandae odio similique dolor, quam sint sunt laboriosam aliquam!</p>
-                <div class="user">
-                    <div class="user__rating">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+            <div class="test__container">
+                    <div class="img__wrapper">
+                        <img src="assets/connection.svg" alt="">
                     </div>
-                    <h3 class="user__title">Amazing User Experience</h3>
-                    <p class="user__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, tempora sunt aperiam culpa atque praesentium dignissimos a quos facilis esse aspernatur deleniti, vitae perspiciatis cupiditate officiis, natus pariatur eveniet numquam. Placeat, ab et eaque hic consequuntur corrupti. Fugiat officia soluta ea magni ullam tempore?</p>
-                    <div class="user__profile">
-                        <img class="user__profile--file" src="" alt="">
-                        <div class="user__names">
-                            <h3 class="user__name">Charlotte Hale</h3>
-                            <h5 class="user__role">Director, Delos Inc.</h5>
-                        </div>
-                        <div class="arrows">
-                            <img class="leftarrow" src="" alt="">
-                            <img class="rightarrow" src="" alt="">
+                    <div class="testimonal">
+                        <h3 class="testimonal__title">TESTIMONIALS</h3>
+                        <h1 class="testimonal__subtitle">Our Clients Love Us.</h1>
+                        <p class="testimonal__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ipsa ratione fuga delectus earum eligendi recusandae odio similique dolor, quam sint sunt laboriosam aliquam!</p>
+                        <div class="user">
+                            <div class="user__rating">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <h3 class="user__title">Amazing User Experience</h3>
+                            <p class="user__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, tempora sunt aperiam culpa atque praesentium dignissimos a quos facilis esse aspernatur deleniti, vitae perspiciatis cupiditate officiis, natus pariatur eveniet numquam. Placeat, ab et eaque hic consequuntur corrupti. Fugiat officia soluta ea magni ullam tempore?</p>
+                            <div class="user__profile">
+                                <img class="user__profile--file" src="" alt="">
+                                <div class="user__names">
+                                    <h3 class="user__name">Charlotte Hale</h3>
+                                    <h5 class="user__role">Director, Delos Inc.</h5>
+                                </div>
+                                <div class="arrows">
+                                    <img class="leftarrow" src="" alt="">
+                                    <img class="rightarrow" src="" alt="">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
             </div>
         </div>
     </section>
